--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <title>Пример подключения плеера</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="font-awesome.min.css">
 </head>
 <body>
   <div id="player" style="width: 800px; height: 600px;">
     <div class="js-video-container" style="width: 100%; height: 100%"></div>
-    <button class="js-play-button">Play</button>
+    <button class="js-play-button"><i class="fa fa-play" aria-hidden="true"></i></button>
     <!-- Here can be placed player controls: play and volume buttons -->
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
