--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <button class="js-play-button">
             <i class="fa fa-play" aria-hidden="true"></i>
         </button>
+        <button class="js-pause-button">
+            <i class="fa fa-pause" aria-hidden="true"></i>
+        </button>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
