--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="player">
+<div id="player" class="player">
     <div class="js-video-container"></div>
     <div class="buttons">
         <button class="js-play-button">
