--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                 <button class="js-mute-button">
                     <i class="fa fa-volume-off" aria-hidden="true"></i>
                 </button>
+                <div class="empty-space"></div>
+                <button class="js-fullscreen-button">
+                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                </button>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
