--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div id="player" class="player">
             <div class="js-video-container"></div>
-            <div class="buttons">
+            <div class="player-buttons">
                 <button class="js-play-button">
                     <i class="fa fa-play" aria-hidden="true"></i>
                 </button>
