--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
         <div id="player" class="player">
             <div class="js-video-container"></div>
             <div class="player-buttons">
-                <button class="js-play-button">
+                <button class="js-play-button player-button">
                     <i class="fa fa-play" aria-hidden="true"></i>
                 </button>
-                <button class="js-pause-button">
+                <button class="js-pause-button player-button">
                     <i class="fa fa-pause" aria-hidden="true"></i>
                 </button>
-                <button class="js-volume-button">
+                <button class="js-volume-button player-button">
                     <i class="fa fa-volume-up" aria-hidden="true"></i>
                 </button>
-                <button class="js-mute-button">
+                <button class="js-mute-button player-button">
                     <i class="fa fa-volume-off" aria-hidden="true"></i>
                 </button>
                 <div class="empty-space"></div>
-                <button class="js-fullscreen-button">
+                <button class="js-fullscreen-button player-button">
                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                 </button>
             </div>
