--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="player" class="player">
-            <div class="js-video-container"></div>
+            <div class="js-video-container player-coontainer"></div>
             <div class="player-buttons">
                 <button class="js-play-button player-button">
                     <i class="fa fa-play" aria-hidden="true"></i>
