--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Пример подключения плеера</title>
         <meta charset="utf-8">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="font-awesome.min.css">
         <link rel="stylesheet" href="styles.css">
@@ -10,23 +11,33 @@
     <body>
         <div id="player" class="player">
             <div class="js-video-container"></div>
-            <div class="player-buttons">
-                <button class="js-play-button player-button">
-                    <i class="fa fa-play" aria-hidden="true"></i>
-                </button>
-                <button class="js-pause-button player-button">
-                    <i class="fa fa-pause" aria-hidden="true"></i>
-                </button>
-                <button class="js-volume-button player-button">
-                    <i class="fa fa-volume-up" aria-hidden="true"></i>
-                </button>
-                <button class="js-mute-button player-button">
-                    <i class="fa fa-volume-off" aria-hidden="true"></i>
-                </button>
-                <div class="empty-space"></div>
-                <button class="js-fullscreen-button player-button">
-                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
-                </button>
+            <div class="control-panel">
+                <div class="left-buttons">
+                    <button class="js-play-button player-button">
+                        <i class="fa fa-play" aria-hidden="true"></i>
+                    </button>
+                    <button class="js-pause-button player-button">
+                        <i class="fa fa-pause" aria-hidden="true"></i>
+                    </button>
+                    <button class="js-volume-button player-button">
+                        <i class="fa fa-volume-up" aria-hidden="true"></i>
+                    </button>
+                    <button class="js-mute-button player-button">
+                        <i class="fa fa-volume-off" aria-hidden="true"></i>
+                    </button>
+                </div>
+                <div class="central-space">
+                    <div class="js-current-time time-left"></div>
+                    <div class="js-progress progress-background">
+                        <div class="js-progress-slider progress-bar"></div>
+                    </div>
+                    <div class="js-duration time-right"></div>
+                </div>
+                <div class="right-buttons">
+                    <button class="js-fullscreen-button player-button">
+                        <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                    </button>
+                </div>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
