add slider to video player

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <div class="js-current-time time-left"></div>
                     <div class="js-progress progress-background">
                         <div class="js-progress-slider progress-bar"></div>
+                        <div class="ring"></div>
                     </div>
                     <div class="js-duration time-right"></div>
                 </div>
