--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="font-awesome.min.css">
         <link rel="stylesheet" href="styles.css">
+        <link type="image/x-icon" href="https://img.icons8.com/?size=100&id=7690&format=png&color=000000" rel="shortcut icon">
     </head>
     <body>
         <div id="player" class="player">
