--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="en">
 <html>
     <head>
         <title>Пример подключения плеера</title>
@@ -46,8 +46,7 @@
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://unpkg.com/playable@2.10.3/dist/statics/playable.bundle.min.js"></script>
         <script src="player.js"></script>
-
-        <script type="text/javascript">
+        <script>
             createPlayer({elementId: 'player'});
         </script>
     </body>
